[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/grabber.png" type="Texture" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://VolumeControl.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
bg_color = Color( 0.745098, 0.745098, 0.745098, 1 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="VolumeControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -19.0
margin_top = -7.0
margin_right = 21.0
margin_bottom = 9.0
mouse_filter = 1
theme = ExtResource( 2 )
text = "SFX"
align = 1

[node name="Slider" type="HSlider" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 21.0
margin_top = -9.0
margin_right = 96.0
margin_bottom = 8.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 1
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 10.0
value = 5.0

[node name="MouseArea" type="ColorRect" parent="Slider"]
margin_left = -37.0
margin_top = -2.0
margin_right = 86.0
margin_bottom = 19.0
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Tween" type="Tween" parent="."]

[connection signal="value_changed" from="Slider" to="." method="_on_Slider_value_changed"]
[connection signal="mouse_entered" from="Slider/MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="Slider/MouseArea" to="." method="_on_MouseArea_mouse_exited"]
